--- a/style.css
+++ b/style.css
@@ -18,6 +18,22 @@ body {
     font-family: "Fuzzy Bubbles", cursive;
 }
 
+/* Spin Loader */
+#loader {
+    border: 0.5rem solid #f3f3f3; /* Light grey */
+    border-top: 0.5rem solid #505050; /* Blue */
+    border-radius: 50%;
+    width: 3rem;
+    height: 3rem;
+    animation: spin 2s linear infinite;
+}
+  
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+/* _______________ */
+
 #quote-container {
     max-width: 50%;
     min-height: 30%;
